<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_draft"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_draft" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_development"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_development" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_testing"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_testing" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_approved"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_approved" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_production"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_production" />
        </com.google.android.material.chip.ChipGroup>

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/chip_group_note_type"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:paddingHorizontal="8dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_status"
            app:singleSelection="true">

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_top_notes"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_top_notes" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_middle_notes"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_middle_notes" />

            <com.google.android.material.chip.Chip
                android:id="@+id/chip_base_notes"
                style="@style/Widget.AlmmrLab.Chip"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/filter_base_notes" />
        </com.google.android.material.chip.ChipGroup>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/formula_list"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:layout_marginTop="8dp"
            android:clipToPadding="false"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_note_type"
            tools:listitem="@layout/item_formula" />

        <include
            android:id="@+id/empty_state"
            layout="@layout/layout_empty_state"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/chip_group_note_type" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fab_add_formula"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/action_save"
        app:srcCompat="@drawable/ic_add" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>
